--- a/facestylebarber/src/Components/main.css
+++ b/facestylebarber/src/Components/main.css
@@ -25,4 +25,14 @@
     background-color: #0056b3;
     
   }
+  /* Media queries para dispositivos móviles */
+@media only screen and (max-width: 600px) {
+  .container {
+      padding: 10px;
+  }
   
+  .option {
+      padding: 8px 16px;
+      margin: 0 8px;
+  }
+}
