--- a/facestylebarber/src/Components/Image/ImageUploader.css
+++ b/facestylebarber/src/Components/Image/ImageUploader.css
@@ -15,3 +15,17 @@
     /* color: white; /* Cambiar el color del texto a blanco */
   /* }  */ 
 /* */  
+
+.progress-container {
+    width: 100%;
+    height: 20px;
+    background-color: #f0f0f0;
+    border-radius: 4px;
+    overflow: hidden;
+    margin-top: 10px;
+}
+
+.progress-bar {
+    height: 100%;
+    background-color: #007bff;
+}
