--- a/facestylebarber/src/view/main.css
+++ b/facestylebarber/src/view/main.css
@@ -4,6 +4,7 @@
   border-radius: 8px;
   box-shadow: 0 4px 8px rgba(180, 50, 50, 0.1);
   margin-bottom: 20px;
+  text-align: center;
 }
 
 .options {
